05-exposed-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exposed
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 80
    nodePort: 32000
    targetPort: 80
  selector:
    app: nginx
