09-ingress-before-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress-tls
spec:
  rules:
  - host: web.d47zm3.me
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
