11-ingress-after-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - web.d47zm3.me
    secretName: nginx-tls
  rules:
  - host: web.d47zm3.me
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
