ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nginx.d47zm3.me
    secretName: nginx-tls
  rules:
  - host: nginx.d47zm3.me
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
